# django-Ecommerce-site

./: .env-sample  .gitignore  README.md  pyproject.toml  sd.js
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_userprofile.py
carts/: admin.py  context_processors.py  models.py  urls.py  views.py
carts/migrations/: 0001_initial.py  0002_cartitem_variations.py  0003_cartitem_user_alter_cartitem_cart.py
category/: admin.py  models.py
category/migrations/: 0001_initial.py  0002_alter_category_slug.py
greatkart/: asgi.py  settings.py  urls.py  wsgi.py
mysite/: views.py
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_remove_order_state.py  0003_remove_orderproduct_color_remove_orderproduct_size.py  0004_remove_orderproduct_variation_and_more.py
store/: admin.py  forms.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_variation.py  0003_rename_variation_category_variation_category_and_more.py  0004_reviewrating.py  0005_productgallery.py
templates/accounts/: account_verification_email.html  change_password.html  dashboard.html  edit_profile.html  forgotPassword.html  login.html  my_orders.html  order_detail.html  register.html  resetPassword.html  reset_password_email.html
templates/includes/: dashboard_sidebar.html  footer.html  navbar.html
templates/mysite/: base.html  home.html
templates/orders/: order_complete.html  order_recieved_email.html  payments.html
templates/store/: cart.html  checkout.html  store.html  (+1 more)
(+8 files in other folders)
